[package]
name = "ruffle_render"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
ruffle_wstr = { path = "../wstr" }
swf = { path = "../swf"}
tracing = { workspace = true }
gif = "0.13.1"
png = "0.17.14"
flate2 = { workspace = true }
smallvec = { version = "1.13.2", features = ["union"] }
downcast-rs = "1.2.1"
lyon = { version = "1.0.1", optional = true }
lyon_geom = "1.0.6"
thiserror = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
enum-map = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
clap = { workspace = true, optional = true }
h263-rs-yuv = { git = "https://github.com/ruffle-rs/h263-rs", rev = "f0fa94c366a1d0383df99aa835add175658d6bad"}
num-traits = { workspace = true }
num-derive = { workspace = true }
byteorder = "1.5"
wgpu = { workspace = true, optional = true }
indexmap = "2.6.0"

# This crate has a `compile_error!` on apple platforms
[target.'cfg(not(target_vendor = "apple"))'.dependencies.renderdoc]
version = "0.12.1"
optional = true

[dependencies.jpeg-decoder]
version = "0.3.1"
default-features = false # can't use rayon on web

[dev-dependencies]
approx = "0.5.1"

[features]
default = []
tessellator = ["lyon"]
web = ["wasm-bindgen"]
wgpu = ["dep:wgpu"]
serde = ["dep:serde"]
