[package]
name = "ruffle_gc_arena"
version.workspace = true
description = "Temporary, internal gc-arena facade for Ruffle"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
gc-arena = { version = "0.5.0", features = ["hashbrown"] }
