[package]
name = "ruffle_gc_arena"
version = "0.0.0"
description = "Temporary, internal gc-arena facade for Ruffle"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
gc-arena = { git = "https://github.com/kyren/gc-arena.git", rev = "d394233a367ec7352a361cf93572c428ec092d66" }
