[package]
name = "ruffle_gc_arena"
version.workspace = true
description = "Temporary, internal gc-arena facade for Ruffle"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
gc-arena = { git = "https://github.com/kyren/gc-arena.git", rev = "cef6db5e15bdf27f3c85b83ec0455431f134d2f0" }
