[package]
name = "ruffle_scanner"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>"]
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
ruffle_core = { path = "../core", features = ["deterministic"] }
log = "0.4"
walkdir = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
indicatif = "0.17"
path-slash = "0.2.1"
swf = { path = "../swf" }
rayon = "1.8.0"
crossbeam-channel = "0.5"
sha2 = "0.10.8"
