[package]
name = "ruffle_scanner"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>"]
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
ruffle_core = { path = "../core", features = ["deterministic"] }
log = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true, features = ["derive"] }
csv = "1.3"
indicatif = "0.17"
path-slash = "0.2.1"
swf = { path = "../swf" }
rayon = "1.10.0"
crossbeam-channel = "0.5"
sha2 = "0.10.8"
