[package]
name = "stub-report"
authors.workspace = true
edition = "2024"
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
ruffle_core = { path = "../core", features = ["known_stubs"] }

[lints]
workspace = true
