[package]
name = "swf"
version = "0.2.1"
description = "Read and write the Adobe Flash SWF file format."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true, features = ["serde"] }
bitstream-io = "2.5.3"
byteorder = "1.5"
encoding_rs = "0.8.34"
num-derive = { workspace = true }
num-traits = { workspace = true }
log = { workspace = true }
flate2 = { workspace = true, optional = true}
lzma-rs = {version = "0.3.0", optional = true }
enum-map = { workspace = true }
simple_asn1 = "0.6.2"
serde = { version = "1.0.210", features = ["derive"] }

[features]
default = ["flate2", "lzma"]
lzma = ["lzma-rs"]
