[package]
name = "swf"
version = "0.2.1"
description = "Read and write the Adobe Flash SWF file format."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true }
bitstream-io = "2.5.3"
byteorder = "1.5"
encoding_rs = "0.8.35"
num-derive = { workspace = true }
num-traits = { workspace = true }
log = { workspace = true }
flate2 = { workspace = true, optional = true}
lzma-rs = {version = "0.3.0", optional = true }
enum-map = { workspace = true }
simple_asn1 = "0.6.2"

[features]
default = ["flate2", "lzma"]
lzma = ["lzma-rs"]
