[package]
name = "swf"
version = "0.2.2"
description = "Read and write the Adobe Flash SWF file format."
authors.workspace = true
edition = "2024"
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true }
bitstream-io = { workspace = true }
byteorder = { workspace = true }
encoding_rs = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
log = { workspace = true }
flate2 = { workspace = true, optional = true }
lzma-rs = { workspace = true, optional = true }
enum-map = { workspace = true }
simple_asn1 = "0.6.3"

[features]
default = ["flate2", "lzma"]
lzma = ["lzma-rs"]
