[package]
name = "tests"
authors = ["Aaron Hill <aa1ronham@gmail.com>"]
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
futures = "0.3.28"
ruffle_core = { path = "../core", features = ["deterministic", "timeline_debug", "avm_debug", "audio", "mp3"] }
ruffle_render_wgpu = { path = "../render/wgpu" }
ruffle_render = { path = "../render" }
ruffle_input_format = { path = "input-format" }
ruffle_socket_format = { path = "socket-format" }
ruffle_video_software = { path = "../video/software", optional = true }
image = { version = "0.24.6", default-features = false, features = ["png"] }
regex = "1.9.3"
url = "2.4.0"

[features]
# Enable running image comparison tests. This is off by default,
# since the images we compare against are generated on CI, and may
# not match your local machine's Vulkan version / image output.
imgtests = ["ruffle_video_software"]
lzma = ["ruffle_core/lzma"]

[dev-dependencies]
approx = "0.5.1"
pretty_assertions = "1.4.0"
env_logger = "0.10.0"
tracing = { workspace = true}
tracing-subscriber = { workspace = true }
serde = "1.0.183"
toml = "0.7.6"
libtest-mimic = "0.6.1"
walkdir = "2.3.3"
anyhow = "1.0.72"
async-channel = "1.9.0"

[[test]]
name = "tests"
harness = false
path = "tests/regression_tests.rs"
