[package]
name = "tests"
authors = ["Aaron Hill <aa1ronham@gmail.com>"]
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
# Enable running image comparison tests. This is off by default,
# since the images we compare against are generated on CI, and may
# not match your local machine's Vulkan version / image output.
imgtests = [
    "ruffle_render_wgpu",
    "ruffle_test_framework/ruffle_video_software",
    "ruffle_test_framework/ruffle_video_external",
]
jpegxr = ["ruffle_test_framework/jpegxr"]
lzma = ["ruffle_test_framework/lzma"]

[dependencies]
ruffle_render_wgpu = { path = "../render/wgpu", optional = true }
regex = "1.11.1"

[dev-dependencies]
ruffle_core = { path = "../core", features = ["deterministic", "timeline_debug", "avm_debug", "audio", "mp3", "default_font", "test_only_as3"] }
ruffle_test_framework = { path = "framework" }
libtest-mimic = "0.8.1"
walkdir = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true, features  = ["png"] }
futures = { workspace = true }
env_logger = "0.11.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "tests"
harness = false
path = "tests/regression_tests.rs"
