[package]
name = "ruffle_types"
version = "0.1.0"
authors = ["Ruffle LLC <ruffle@ruffle.rs>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ruffle_wstr = { path = "../wstr" }
swf = { path = "../swf" }
log = "0.4"
url = "2.2.2"
gc-arena = { git = "https://github.com/ruffle-rs/gc-arena" }
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
approx = "0.5.1"
