[package]
name = "ruffle_types"
version = "0.1.0"
authors = ["Ruffle LLC <ruffle@ruffle.rs>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ruffle_wstr = { path = "../wstr" }
swf = { path = "../swf" }
log = "0.4"
url = "2.2.2"
gc-arena = { git = "https://github.com/ruffle-rs/gc-arena" }
num-traits = "0.2"
num-derive = "0.3"
smallvec = { version = "1.9.0", features = ["union"] }
png = { version = "0.17.5" }
gif = "0.11.4"
downcast-rs = "1.2.0"
flate2 = "1.0.24"
generational-arena = "0.2.8"
instant = "0.1"
thiserror = "1.0"
indexmap = "1.9.1"
bitflags = "1.3.2"

[dependencies.jpeg-decoder]
version = "0.2.6"
default-features = false # can't use rayon on web

[target.'cfg(not(target_family = "wasm"))'.dependencies.futures]
version = "0.3.21"

[target.'cfg(target_family = "wasm")'.dependencies.wasm-bindgen-futures]
version = "0.4.32"

[dev-dependencies]
approx = "0.5.1"
