[package]
name = "ruffle_video"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
swf = { path = "../swf" }
ruffle_render = { path = "../render" }
generational-arena = "0.2.8"
thiserror = "1.0"

[features]
default = []
