[package]
name = "build_playerglobal"
authors.workspace = true
edition = "2024"
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
convert_case = "0.10.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
swf = { path = "../../swf" }
clap = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
