[package]
name = "build_playerglobal"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
convert_case = "0.11.0"
proc-macro2 = "1.0.106"
quote = "1.0.44"
swf = { path = "../../swf" }
clap = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
