[package]
name = "ruffle_common"
authors.workspace = true
edition = "2024"
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
hashbrown = { workspace = true }
fnv = { workspace = true }
gc-arena = { workspace = true }
quick-xml = { workspace = true }
regress = { workspace = true }
ruffle_macros = { path = "../macros" }
ruffle_wstr = { path = "../../wstr" }
swf = { path = "../../swf" }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
