[package]
name = "ruffle_macros"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = { version = "2.0.113", features = ["extra-traits", "full"] }
