[package]
name = "ruffle-gdi-font-renderer"
version = "0.1.0"
edition = "2021"
authors = ["Ruffle LLC <ruffle@ruffle.rs>"]
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi4"] }
napi-derive = "2.16"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
