[package]
name = "ruffle_render_canvas"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
js-sys = "0.3.64"
log = "0.4"
ruffle_web_common = { path = "../../web/common" }
wasm-bindgen = "=0.2.87"
fnv = "1.0.7"
ruffle_render = { path = "..", features = ["web"] }
swf = { path = "../../swf" }
downcast-rs = "1.2.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "CanvasGradient", "CanvasPattern", "CanvasRenderingContext2d", "CanvasWindingRule", "CssStyleDeclaration",
    "Document", "DomMatrix", "Element", "HtmlCanvasElement", "ImageData", "Navigator", "Path2d", "SvgMatrix",
]
