[package]
name = "naga-agal"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bitflags = "2.5.0"
naga = { workspace = true }
num-derive = "0.4.2"
num-traits = "0.2.18"

[dev-dependencies]
insta = "1.36.1"
naga = { workspace = true, features = ["wgsl-out"] }
