[package]
name = "naga-agal"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true }
naga = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
insta = "1.41.0"
naga = { workspace = true, features = ["wgsl-out"] }
